--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^10.4.4",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "css-loader": "^3.6.0",
     "customize-cra": "^1.0.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "firebase": "^7.15.5",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-input-mask": "^2.0.4",
+    "react-media": "^1.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.1",
+    "sinon": "^9.0.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "yup": "^0.29.1"
@@ -45,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "jest-enzyme": "^7.1.2",
+    "react-test-renderer": "^16.13.1"
   }
 }
